infrastructure/cdk.out/LocalStack.template.json
{
 "Resources": {
  "PatientManagementVPC522067E7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1SubnetC8305E9D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    }
   }
  },
  "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet1RouteTableA48D3D3E"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet1EIPC113BD7F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet1EIPC113BD7F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet1SubnetC8305E9D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet1DefaultRoute1E407ABB",
    "PatientManagementVPCPublicSubnet1RouteTableAssociationA39A24A4"
   ]
  },
  "PatientManagementVPCPublicSubnet2Subnet07CEC558": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTable391C4D34": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    }
   }
  },
  "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPublicSubnet2RouteTable391C4D34"
    }
   },
   "DependsOn": [
    "PatientManagementVPCVPCGW1FFEFAEB"
   ]
  },
  "PatientManagementVPCPublicSubnet2EIP208E0C4A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVPCPublicSubnet2NATGateway28B0784D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVPCPublicSubnet2EIP208E0C4A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPublicSubnet2Subnet07CEC558"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVPCPublicSubnet2DefaultRoute2DC1F916",
    "PatientManagementVPCPublicSubnet2RouteTableAssociationCAC8BA09"
   ]
  },
  "PatientManagementVPCPrivateSubnet1Subnet05B10E79": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1RouteTableAssociationAA604973": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet1DefaultRouteC24DADA9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet1NATGatewayB9CF9F92"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet1RouteTableE0FA4385"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2Subnet8A2E409C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2RouteTableAssociationC55EBEF2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    },
    "SubnetId": {
     "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
    }
   }
  },
  "PatientManagementVPCPrivateSubnet2DefaultRoute98121A2D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVPCPublicSubnet2NATGateway28B0784D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVPCPrivateSubnet2RouteTableBC0C3BB6"
    }
   }
  },
  "PatientManagementVPCIGWA0746919": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVPC"
     }
    ]
   }
  },
  "PatientManagementVPCVPCGW1FFEFAEB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVPCIGWA0746919"
    },
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "MySqlSecurityGroup63FD8C2A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow MySQL inbound traffic",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "PatientManagementVPC522067E7",
        "CidrBlock"
       ]
      },
      "Description": "Allow MySQL from VPC",
      "FromPort": 3306,
      "IpProtocol": "tcp",
      "ToPort": 3306
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "MySqlInstanceSubnetGroup5B1A5D60": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for MySqlInstance database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "MySqlInstance2CFB48F1": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "patient",
    "DBSubnetGroupName": {
     "Ref": "MySqlInstanceSubnetGroup5B1A5D60"
    },
    "DeletionProtection": false,
    "Engine": "mysql",
    "EngineVersion": "8.0.36",
    "MasterUserPassword": "Piyu@98911",
    "MasterUsername": "root",
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "MySqlSecurityGroup63FD8C2A",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MsSqlSecurityGroupA01189B0": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow MSSQL inbound traffic",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "PatientManagementVPC522067E7",
        "CidrBlock"
       ]
      },
      "Description": "Allow MSSQL from VPC",
      "FromPort": 1433,
      "IpProtocol": "tcp",
      "ToPort": 1433
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "MsSqlInstanceSubnetGroup472B9D2B": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for MsSqlInstance database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
     },
     {
      "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
     }
    ]
   }
  },
  "MsSqlInstance38A5B688": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.small",
    "DBSubnetGroupName": {
     "Ref": "MsSqlInstanceSubnetGroup472B9D2B"
    },
    "DeletionProtection": false,
    "Engine": "sqlserver-ex",
    "EngineVersion": "16.00.4135.4.v1",
    "MasterUserPassword": "Piyu@98911",
    "MasterUsername": "sa",
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "MsSqlSecurityGroupA01189B0",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MySqlHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 5,
     "FullyQualifiedDomainName": {
      "Fn::GetAtt": [
       "MySqlInstance2CFB48F1",
       "Endpoint.Address"
      ]
     },
     "Port": 3306,
     "RequestInterval": 10,
     "Type": "TCP"
    }
   }
  },
  "MsSqlHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 10,
     "FullyQualifiedDomainName": {
      "Fn::GetAtt": [
       "MsSqlInstance38A5B688",
       "Endpoint.Address"
      ]
     },
     "Port": 1433,
     "RequestInterval": 10,
     "Type": "TCP"
    }
   }
  },
  "KafkaSecurityGroup4BEFFE40": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow Kafka broker access from ECS microservices",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "PatientManagementVPC522067E7",
        "CidrBlock"
       ]
      },
      "Description": "Plaintext traffic from VPC",
      "FromPort": 9092,
      "IpProtocol": "tcp",
      "ToPort": 9092
     },
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "PatientManagementVPC522067E7",
        "CidrBlock"
       ]
      },
      "Description": "TLS traffic from VPC",
      "FromPort": 9094,
      "IpProtocol": "tcp",
      "ToPort": 9094
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVPCPrivateSubnet1Subnet05B10E79"
      },
      {
       "Ref": "PatientManagementVPCPrivateSubnet2Subnet8A2E409C"
      }
     ],
     "InstanceType": "kafka.t3.small",
     "SecurityGroups": [
      {
       "Fn::GetAtt": [
        "KafkaSecurityGroup4BEFFE40",
        "GroupId"
       ]
      }
     ]
    },
    "ClusterName": "PatientManagementMSK",
    "KafkaVersion": "3.5.1",
    "NumberOfBrokerNodes": 2
   }
  },
  "PatientManagementCluster98E10F8D": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "EcsCluster"
   }
  },
  "PatientManagementClusterDefaultServiceDiscoveryNamespace72C5F264": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-management.local",
    "Vpc": {
     "Ref": "PatientManagementVPC522067E7"
    }
   }
  }
 }
}
